# lucerna

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/core/: __init__.py
src/core/application/: __init__.py  message_service.py
src/core/infrastructure/: __init__.py
src/core/infrastructure/databases/: __init__.py  sql_lite.py
src/core/models/: __init__.py  llm_message.py  message.py
src/service_host/: __init__.py  api.py  main.py  ui.py
src/service_host/api_routers/: __init__.py  messages.py
