[project]
name = "lucerna"
version = "0.1.0"
description = "LLM observability service"
authors = [{name = "Ted Ly", email = "lydongcanh@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "tiktoken (>=0.11.0,<0.12.0)"
]

[tool.poetry]
packages = [{include = "service_host", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.13.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
fix = true
select = ["E", "F", "I"]  # Example: Errors, pyflakes, isort

